@@ -243,6 +243,7 @@ tiberium-centrifuge-override=Override __1__ Outputs
 tiberium-advanced-start=Tiberium Advanced Start
 tiberium-ore-removal=Tiberium Ore Only
 tiberium-item-damage-scale=Inventory Tiberium Damage Scale
+tiberium-auto-scale-performance=Tiberium Growth Optimization 
 
 [mod-setting-description]
 tiberium-easy-recipes=Simplifies recipes by removing all catalysts and introducing early transmutation recipes so you never have to deal with centrifuging. For the full experience, also turn off the Waste settings below.\nDefault: disabled
@@ -264,6 +265,7 @@ tiberium-starting-area=This will include Tiberium as one of your starting ore pa
 tiberium-advanced-start=Start with some basic tiberium refining equipment, so that you can do a tiberium only run. \nDefault: disabled
 tiberium-ore-removal=Enables the Tiberium Ore in Start setting, and the Tiberium Advanced Start setting. \nDefault: disabled
 tiberium-item-damage-scale=If enabled, scales the damage from tiberium in your inventory to the number of stacks you have. You will die immediately if you have too many. \nDefault: disabled
+tiberium-auto-scale-performance=Reduce late-game Tiberium growth granularity to avoid potential UPS loss.\nDefault: disabled
 
 [map-gen-preset-name]
 Tib-only=Tiberium Only
